assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');



*{
    margin: 0;
    padding: 0;
    border: 0;
    font-family: 'Roboto', sans-serif;
    color: #333;
}


body{

    background-color: #fafafa;


}


nav{
    background-color: #fafafa;
}

/* --- text --- */

.inline-block{
    display: inline-block;
}


/* --- header --- */

.active{
    border-bottom: 2px solid #0275d8;
}


/* hero cover */


#hero-container{
    height: 787px;
    width: 100%;
    overflow: hidden;
    position: relative;
}


#hero-image{
    height: 750px;
    width: 100%;
    background-image: url("../img/band-hero-img.jpg");
    background-size: cover;
    background-position: center;
    animation-name: hero-image-zoom;
    animation-duration: 2s;
    animation-fill-mode: forwards;
}

@keyframes hero-image-zoom{
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.05);
    }
}

#hero-cover-text h1{
    color: #fafafa;
    font-size: 250%;
    margin-bottom: 25px;
    line-height: 50px;
}
#hero-cover-text h2{
    font-size: 120%;
    color: #fafafa;
    line-height: 25px;
}

#hero-cover-text{
    color: #fafafa;
    text-shadow: 3px 3px #333;
    font-family: roboto;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 150%;

    width: 1000px;
    height: 100px;

    top: 425px;
    left: 175px;
    position: absolute;
    text-align: left;


}







/* --- latest albums --- */


.text-center{
    padding-top: 50px;
}

.text-center a h3{
    color: #0275d8;
}

.flex-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding-top: 50px;
    padding-bottom: 50px;
}

.flex-container a{
    text-decoration: none;
}

.flex-container a:hover{
    box-shadow: 3.9px 7.8px 7.8px hsl(0deg 0% 0% / 0.38);

}

.card{
    width: 400px;
    height: 400px;
    padding: 30px 0 0 0;
    
    margin: 15px;
    flex-shrink: 0;


    display: flex;
    justify-content: center;
    align-items: center;
}

.card h3{
    color: #fafafa;
    text-shadow: 3px 3px #333;
    font-family: roboto;
    text-transform: uppercase;
    letter-spacing: 2px;
    
}


.card p{
    color: #fafafa;
    text-shadow: 3px 3px #333;
    font-family: roboto;
    letter-spacing: 2px;
    text-align: center;
}


#album1{
    background: url("../img/unknown-pleasures.jpg") no-repeat;
    background-size: cover;
    background-position: center;
    
	
}

#album2{
    background: url("../img/blackwater-park.jpg") no-repeat;
    background-size: cover;
    background-position: center;
}

#album3{
    background: url("../img/paranoid.jpg") no-repeat;
    background-size: cover;
    background-position: center;
}

#album4{
    background: url("../img/master-of-puppets.jpeg") no-repeat;
    background-size: cover;
    background-position: center;
}

#album5{
    background: url("../img/aenima.jpg") no-repeat;
    background-size: cover;
    background-position: center;
}









/* --- album list --- */

.album-list h1{
    margin: 10px;
    
}

.review-container{
    display: flex;
    margin: 0 auto;
    border-top: 2px solid #333;
    margin: 0 10px 0 10px;
}


.album-image-card{
    width: 400px;
    height: 400px;
    margin: 10px;
    flex-shrink: 0;
  
}

.review-container:hover{
    box-shadow: 3.9px 7.8px 7.8px hsl(0deg 0% 0% / 0.38);

}

.album-text{
    flex-grow: 1;
    margin-left: 10px;
    flex-basis: 1000px;
    
}

.album-text h3{
    margin: 10px 0 10px 0;
}

.album-text p{
    margin: 0;
    font-size: 1.5em;
    padding: 75px 0;
    
}

.album-text p a{
    margin-top: 100px;
    bottom: 0;
}








/* --- form --- */

.contact-form-header{
    font-weight: 400;
    margin-top: 150px;


}

.contact-form-center{
    margin: 0 auto;
    max-width: 70%;
    margin-bottom: 100px;
}

.contact-margin-bottom{
    margin-bottom: 10px;
}




/* --- footer --- */

footer{
    background-color: #fafafa;
    min-width: 120px;
    border-top: 2px solid #0275d8;
    padding: 15px 0 15px 0;
}


.container{
    max-width: 100%;
    margin: 0 auto;
}

.footer{
    display: flex;
    flex-wrap: wrap;
}

.col{
    flex-grow: 1;
    flex-basis: 300px;
    text-align: center;
}


.col li a i{
    width: 40px;
    height: 40px;
    border-radius: 50%;
    font-size: 30px;
    line-height: 40px;
    text-align: center;

    color: #fafafa;
    background-color: #0275d8;

}



/* --- Media Queries --- */

@media screen and (max-width: 1393px){

    #hero-cover-text{
        width: 500px;
    }

    .review-container{
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }

    .album-text{
        text-align: center;
    }

    
   
}



@media screen and (max-width: 755px){

    #hero-cover-text{
        width: 100px;
        left: 30px;
        line-height: 2px;
    }

    .album-text p{
        padding: 25px 0;
    }
    

}

